<resources>
    <string name="app_name">Assignment</string>
    <string name="date">date</string>
    <string name="phone">phone</string>
    <string name="emailAddress">emailAddress</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="go_back_to_main_page">Go back to main page</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="si_password">Password</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="main_sign_in">Sign In</string>
    <string name="main_sign_up">Sign Up</string>
    <string name="si_name">Name</string>
    <string name="si_email">Email</string>
    <string name="back_main_page">Back to main page</string>


</resources>
